website to index

--- a/leaf.html
+++ b/leaf.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="nav-container">
-        <a href="website.html" target="_blank" class="split"><img src="logo_1_copy (2).png" style="height: 188px;"></a>
+        <a href="index.html" target="_blank" class="split"><img src="logo_1_copy (2).png" style="height: 188px;"></a>
         <a href="contacts.html" class="nav_split"><i class="fa fa-address-card" aria-hidden="true"></i> CONTACTS</aa>
         <a href="about.html" class="nav_split"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT US</a>
         <a href="partner.html" class="nav_split"><i class="fa fa-handshake-o" aria-hidden="true"></i> PARTNERS</a>
@@ -38,7 +38,7 @@
                                             <div class="winnings">
                                                 Approx. Total Winnings: $42,260
                                                 <div class="agents">
-                                                    Main Agents: <img src="40px-Killjoy_VALORANT_Icon.png"><img src="30px-Cypher_0.50_VALORANT_Icon.png" style="height: 40px;"><img src="30px-Viper_0.50_VALORANT_Icon.png" style="height: 40px;>
+                                                    Main Agents: <img src="40px-Killjoy_VALORANT_Icon.png"><img src="30px-Cypher_0.50_VALORANT_Icon.png" style="height: 40px;"><img src="30px-Viper_0.50_VALORANT_Icon.png" style="height: 40px;">
                                                     <div class="links">
                                                         <h2>LINKS</h2>
                                                         <a href="https://twitter.com/leaf_cs"><i class="fa fa-twitter-square fa-3x" aria-hidden="true" style="color:rgb(8, 239, 239)"></i></a>
