--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="nav-container">
-        <a href="website.html" class="split"><img src="logo_1_copy (2).png" style="height: 188px;"></a>
+        <a href="index.html" class="split"><img src="logo_1_copy (2).png" style="height: 188px;"></a>
         <a href="contacts.html" class="nav_split"><i class="fa fa-address-card" aria-hidden="true"></i> CONTACTS</a>
         <a href="about.html" class="nav_split"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT US</a>
         <a href="partner.html" class="nav_split"><i class="fa fa-handshake-o" aria-hidden="true"></i> PARTNERS</a>
